--- a/less/button.less
+++ b/less/button.less
@@ -3,10 +3,13 @@
     border-radius: 4px;
     width: 30%;
     height: 4.5rem;
+    opacity: 1.5;
 
-    @media (max-width: 430px) {
+    @media (max-width: 500px) {
         width: 100%;
         height: 4.5rem;
+
+        opacity: 2.0;
     }
 
 }
