--- a/less/global.less
+++ b/less/global.less
@@ -5,11 +5,15 @@
 
 html {
   font-size: 62.5%;
+  margin-left: 10%;
+  margin-right: 10%;
+  
 }
 
 html, body {
   font-family: 'Ubuntu', sans-serif;
   color: @main-font-color;
+  
 }
 
 h1, h2, h3, h4, h5 {
@@ -32,6 +36,7 @@ p {
 
 .container {
   width: 100%;
+
    
 }
 
