--- a/less/home-page.less
+++ b/less/home-page.less
@@ -11,6 +11,13 @@
     p {
       padding:0 15px;
     }
+
+    .main-header {
+      border-radius: 2%;
+      width: 100%;
+    }
+
+    
   
   }
 
