--- a/less/mixins.less
+++ b/less/mixins.less
@@ -2,17 +2,17 @@
 .new-btn(@bgcolor: #22283A, @width: 180px, @font-color: silver) {
 display: block;
 background-color: @bgcolor;
-width: @width;
 font-size: 1.8rem;
-color: @font-color;
+
 text-align: center;
-width: 100%;
+
 padding: 10%;
 margin: 20%;
 border-radius: 10px;
 
    @media @phone {
-       width: 220px;
+       width: 100%;
+       max-width: 220px;
 
     }
 
