--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,42 +1,36 @@
-.navigation {
 
+.navigation  {
     display:flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    background-color: #f4f4f4;
-    width: 100%;
-  
-    height: 15rem;
+    flex-direction: column;
     
+    
+    max-width: 1480px;
+    width: 100%;
+    height: 100px;
+    font-size: 2.6rem;
 
+    h1{
+        text-align: center;
+        font-size: 3.6rem;
+        width: 100%;
+        
+    }
 
     nav {
-        display:flex;
-        justify-content: center;
         width: 100%;
-        flex-direction: row;
-        align-items: center;
+        height: 40px;
+        margin-right: 1%;
+        margin-left: 1%;
         
     }
 
     nav a {
-        font-size: 1.5rem;
-        color: #22283A;
         text-decoration: none;
-        transition: 0.5s ease;
-        padding: 20px;
-        justify-content: space-evenly;
-
-        &:hover {
-            color: #23293B;
-        }
-    }
-
-    h1 {
-        font-size: 3.5rem;
+        width: 100%;
+        
 
     }
-
+    
 
 }
